# 1lt_nowplaying

./: .gitignore  Cargo.toml  README.md  build.sh
.github/workflows/: build.yml
src/: config.rs  environment.rs  main.rs  mpris_mediaplayer2.rs  nowplaying.rs  web_display.rs
