[package]
name = "nowplaying_1lt"
version = "0.1.0"
authors = ["1LtFord <mail@1lt.dev>"]
edition = "2021"
license = "AGPL-3.0-or-later"
homepage = "https://gitlab.com/1LtSoftware/1lt_nowplayling"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dbus = "0.9.5"
